--- a/index.html
+++ b/index.html
@@ -9,20 +9,19 @@
   <link rel="shortcut icon" href="assets/images/logo2-h_m4rgvkrf.png" type="image/x-icon">
   <meta name="description" content="">
   <title>Home</title>
-  <link rel="stylesheet" href="https://r.mobirisesite.com/932214/assets/web/assets/mobirise-icons2/mobirise2.css?rnd=1734704950562">
-  <link rel="stylesheet" href="https://r.mobirisesite.com/932214/assets/web/assets/mobirise-icons/mobirise-icons.css?rnd=1734704950562">
-  <link rel="stylesheet" href="https://r.mobirisesite.com/932214/assets/tether/tether.min.css?rnd=1734704950562">
-  <link rel="stylesheet" href="https://r.mobirisesite.com/932214/assets/bootstrap/css/bootstrap.min.css?rnd=1734704950562">
-  <link rel="stylesheet" href="https://r.mobirisesite.com/932214/assets/bootstrap/css/bootstrap-grid.min.css?rnd=1734704950562">
-  <link rel="stylesheet" href="https://r.mobirisesite.com/932214/assets/bootstrap/css/bootstrap-reboot.min.css?rnd=1734704950562">
-  <link rel="stylesheet" href="https://r.mobirisesite.com/932214/assets/dropdown/css/style.css?rnd=1734704950562">
-  <link rel="stylesheet" href="https://r.mobirisesite.com/932214/assets/chatbutton/floating-wpp.css?rnd=1734704950562">
-  <link rel="stylesheet" href="https://r.mobirisesite.com/932214/assets/smart-cart/minicart-theme.css?rnd=1734704950562">
-  <link rel="stylesheet" href="https://r.mobirisesite.com/932214/assets/socicon/css/styles.css?rnd=1734704950562">
-  <link rel="stylesheet" href="https://r.mobirisesite.com/932214/assets/theme/css/style.css?rnd=1734704950562">
+  <link rel="stylesheet" href="https://r.mobirisesite.com/932214/assets/web/assets/mobirise-icons2/mobirise2.css?rnd=1734970843388">
+  <link rel="stylesheet" href="https://r.mobirisesite.com/932214/assets/web/assets/mobirise-icons/mobirise-icons.css?rnd=1734970843388">
+  <link rel="stylesheet" href="https://r.mobirisesite.com/932214/assets/tether/tether.min.css?rnd=1734970843388">
+  <link rel="stylesheet" href="https://r.mobirisesite.com/932214/assets/bootstrap/css/bootstrap.min.css?rnd=1734970843388">
+  <link rel="stylesheet" href="https://r.mobirisesite.com/932214/assets/bootstrap/css/bootstrap-grid.min.css?rnd=1734970843388">
+  <link rel="stylesheet" href="https://r.mobirisesite.com/932214/assets/bootstrap/css/bootstrap-reboot.min.css?rnd=1734970843388">
+  <link rel="stylesheet" href="https://r.mobirisesite.com/932214/assets/dropdown/css/style.css?rnd=1734970843388">
+  <link rel="stylesheet" href="https://r.mobirisesite.com/932214/assets/chatbutton/floating-wpp.css?rnd=1734970843388">
+  <link rel="stylesheet" href="https://r.mobirisesite.com/932214/assets/smart-cart/minicart-theme.css?rnd=1734970843388">
+  <link rel="stylesheet" href="https://r.mobirisesite.com/932214/assets/theme/css/style.css?rnd=1734970843388">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,600,700&display=swap&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,600,700&display=swap&display=swap"></noscript>
-  <link rel="stylesheet" href="https://r.mobirisesite.com/932214/assets/css/mbr-additional.css?rnd=1734704950562" type="text/css">
+  <link rel="stylesheet" href="https://r.mobirisesite.com/932214/assets/css/mbr-additional.css?rnd=1734970843388" type="text/css">
   
   
   
@@ -98,8 +97,7 @@
                 
                 <h1 class="mbr-section-title mbr-bold mbr-white pb-2 mbr-fonts-style display-1">Clarity in Numbers,<br><span class="mbr-light">Confidence in decisions.</span></h1>
                 
-                <div class="mbr-section-btn align-left"><a class="btn btn-primary display-7" href="mailto:ramphis@certusaruba.com">
-                        FREE CONSULTATION</a></div>
+                <div class="mbr-section-btn align-left"><a class="btn btn-primary display-7" href="mailto:ramphis@certusaruba.com">Request a Free Consultation</a></div>
             </div>
         </div>
     </div>
@@ -249,7 +247,7 @@
             <div class="card col-md-12 col-lg-6">
                 <div class="wrapper align-left">
                     <h4 class="mbr-section-subtitle align-left mbr-fonts-style display-7">About Us</h4>
-                    <h3 class="card-title mbr-semibold mbr-fonts-style mbr-info display-2"><span class="mbr-bold">Ramphis</span>&nbsp;<span class="mbr-light">Tromp </span><br><span class="mbr-light">MBA, AA, CICRA, CICA &amp; LI&nbsp;</span></h3>
+                    <h3 class="card-title mbr-semibold mbr-fonts-style mbr-info display-2"><span class="mbr-bold">Ramphis</span>&nbsp;<span class="mbr-light">Tromp </span><br><span class="mbr-light">MBA,&nbsp; AA,&nbsp; CICRA,&nbsp; CICA&nbsp; &amp;&nbsp; LI&nbsp;</span></h3>
                     <p class="mbr-text quote mbr-bold mbr-fonts-style display-7">Ramphis E.M. Tromp is a seasoned financial professional with over 19 years of experience in accountancy, advisory services, and internal auditing across diverse industries in Aruba and the Dutch Caribbean. Combining technical precision with strategic insight, Ramphis delivers tailored solutions that drive sustainable growth and operational excellence.</p>
                     <p class="mbr-text mbr-semibold mbr-fonts-style display-7">He holds a Master of Business Administration (MBA) from the University of Aruba and the prestigious Accountant-Administratieconsulent (AA) designation from the "Koninklijke Nederlandse Beroepsorganisatie van Accountants." He also holds certifications in Internal Control Risk Analysis (ISO 31000), Internal Auditing, Information Security (ISO 27001), and Corporate Governance, among others.<br><br>Ramphis began his external auditing and accountancy career, advancing through esteemed firms (Big 4). Over time, he has built and led internal audit departments. His practical, hands-on approach ensures clients receive actionable insights aligned with their unique challenges.<br></p>
                 </div>
@@ -643,7 +641,7 @@
                     </div>
                     <div class="card-box">
                         <p class="mbr-text mbr-info align-center mbr-fonts-style mbr-light display-5">
-                            Adress: <br><span style="font-weight: normal;">Caya Luna 28,<br>Tarabana Residence,<br>Aruba</span></p>
+                            Address: <br><span style="font-weight: normal;">Caya Luna 28,<br>Tarabana Residence,<br>Aruba</span><span style="font-weight: normal;"><br></span></p>
                     </div>
                 </div>
             </div>
@@ -654,7 +652,7 @@
                     </div>
                     <div class="card-box">
                         <p class="mbr-text mbr-info align-center mbr-fonts-style mbr-light display-5">
-                            Phone |&nbsp; WhatsApp:<br><span style="font-weight: normal;"> +297 593 3877</span><span style="font-weight: normal;"><br></span></p>
+                            Phone |&nbsp; WhatsApp:<br><span style="font-weight: normal;"> +297 593 3877</span><br><br>KvK<span style="font-weight: normal;"># H57811.0<br></span><span style="font-weight: normal;"><br></span></p>
 
                     </div>
                 </div>
